# audio_processing_tools

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  rain_algorithm_technical_assessment.md  test_audio_parser.py  test_cm4_band_noise_processor.py  test_header_parser.py
audio_processing_tools/: __init__.py  alac_utils.py  audio_io.py  audio_processing_framework.py  db_tools.py  fetch.py  labeler.py  noise_processor.py  parse.py  processors.py  transform.py  visualize_audio.py  visualize_noise_output.py
audio_processing_tools/edge/: README.md  band_noise_estimator.py  band_noise_processor.py  device_dsd_processing_emulator.py  dsp_rain_detection.py  feature_extraction.py  noise_defaults.py  noise_processor.py  noise_spectral_wrapper.py  noise_tracker.py  rain_detector.py  rain_frame_classifier.py  rain_signal_processor.py  spectral_noise_processor.py  time_domain_detector.py
audio_processing_tools/edge/parameter_tuning/: call_c_fun.py  classification_algo.py  dsp_integ.py  grid_search.py  libdsp_shared_lib.1.dylib  libdsp_shared_lib_1.dylib  visualization_utils.py
audio_processing_tools/host_analysis/: device_dsd_processing_emulator.py
audio_processing_tools/postprocess/: noise.py  rain.py
